-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.4, 10.2.5, 10.2.6
-
Fix Version/s: 10.2.7
-
Component/s: Storage Engine - InnoDB
-
Labels:
MDEV-11782 introduced useless error log output to the function log_crypt() when decrypting the encrypted redo log. These messages can be emitted to the server error log during crash recovery.
The messages should be removed. The hex dump of the decrypted redo log bytes could be viewed as an information security problem, if the error log is supposed to be "less secret" than the data and log files.
- is caused by
-
MDEV-11782 Redefine the innodb_encrypt_log format
-
- Closed
-