MDEV-13061 innodb_encrypt_log recovery is spamming the error log

log_crypt(): Remove the useless error log output that was
accidentally introduced in MDEV-11782. These messages could be emitted
to the server error log during crash recovery.